deploy/dev-v0/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: aincrad
  name: spring-boot
  labels:
    app: spring-boot
spec:
  selector:
    app: spring-boot
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: LoadBalancer
