deploy/dev-v0/ingress.tb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-ingress
  namespace: aincrad
spec:
  rules:
    - host: aincrad.spring-boot.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-boot
                port:
                  number: 8080
